# c-chess

./: .gitignore  CMakeLists.txt  README.md  board.c  board.h  build_and_run.sh  main.c
include/: board.h  player.h
src/: board.c  main.c  player.c
